--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+Imports:
+  tidyverse
+  magrittr
+  splines
+  furrr
+  doParallel
+  cowplot
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
