--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: demotvmedg
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Time-varying mediation analysis using g-formula
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
